fix: fix swagger Date type incompatibility
