# docs/swagger.json
@@ -284,14 +284,6 @@
         }
     },
     "definitions": {
-        "domain.Date": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
-                }
-            }
-        },
         "domain.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -304,7 +296,8 @@
             "type": "object",
             "properties": {
                 "end_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "id": {
                     "type": "integer"
@@ -316,7 +309,8 @@
                     "type": "integer"
                 },
                 "start_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "user_id": {
                     "type": "string"
@@ -327,7 +321,8 @@
             "type": "object",
             "properties": {
                 "end_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "name": {
                     "type": "string"
@@ -336,7 +331,8 @@
                     "type": "integer"
                 },
                 "start_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "user_id": {
                     "type": "string"
@@ -355,7 +351,8 @@
             "type": "object",
             "properties": {
                 "end_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "name": {
                     "type": "string"
@@ -364,7 +361,8 @@
                     "type": "integer"
                 },
                 "start_date": {
-                    "$ref": "#/definitions/domain.Date"
+                    "type": "string",
+                    "example": "01-2006"
                 },
                 "user_id": {
                     "type": "string"
